--- a/public/assets/css/mystyles.css
+++ b/public/assets/css/mystyles.css
@@ -6,7 +6,8 @@
 
 .map-container{
 	width: 100%;
-	max-width: 1024px;
+	/*max-width: 1024px;*/
+	max-width: 1920px;
 	max-height: 1080px;
 	margin: 0 auto;
 }
