--- a/public/assets/css/mystyles.css
+++ b/public/assets/css/mystyles.css
@@ -11,3 +11,55 @@
 	max-height: 1080px;
 	margin: 0 auto;
 }
+
+/*Style the tab*/
+
+.tab {
+	overflow: hidden;
+	/*border: 1px solid #ccc;
+	background-color: #f1f1f1;*/
+}
+
+.tab button {
+	background-color: inherit;
+	float: left;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	padding: 14px 16px;
+	transition: 0.3s;
+}
+
+.tab button:hover {
+	background-color: #ddd;
+}
+
+div.tab button.active {
+	/*background-color: #ccc;*/
+	border-top: 1px solid #ccc;
+	border-right: 1px solid #ccc;
+	border-bottom: 2px solid #fff;
+	border-left: 1px solid #ccc;
+	color: #555;
+}
+
+.tabcontent {
+	display: none;
+	/*padding: 6px 12px;*/
+	border: 1px solid #ccc;
+	/*border-top: none;*/
+	margin-top: -2px;
+}
+
+.listContent{
+	padding: 6px 12px;
+}
+
+.third-title{
+	padding: 15px 0;
+}
+
+.tab > button.tablinks {
+	color: #337ab7;
+}
+
